[IMP] update template