@@ -1,5 +1,5 @@
 #!/bin/sh
-java -jar app-tests.jar
+exec java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap $JAVA_OPTS -jar /{{service.code}}.jar
 cd test-output
 tar -czvf testng-results.tar.gz testng-results.xml
 curl -v -X POST ${RESULTGATEWAY}/test/v1/automation/import/report/testng?releaseName=${RELEASENAME} -F "file=@testng-results.tar.gz"
